@@ -401,6 +401,7 @@
 	- changed variable declarations
 	- added "png_width" and "png_height" for PNGs to XML output
 	- renamed get_png_IDAT_data() to get_png_data()
+	- added option "write_avi" to control creation of .avi files
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
